name:                blogapp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/beriya/blogapp#readme
license:             MIT
license-file:        LICENSE
author:              Roman Rudakov
maintainer:          rrudakov@protonmail.com
copyright:           2017 Roman Rudakov
category:            Web
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
                     , App.Config
                     , App.Errors
                     , App.Models
                     , App.Routes
                     , App.Server
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , servant
                     , servant-server
                     , wai
                     , warp
                     , postgresql-simple
                     , bcrypt
                     , time
                     , yaml
  default-language:    Haskell2010

executable blogapp
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blogapp
  default-language:    Haskell2010

executable createadmin
  hs-source-dirs:      utils
  main-is:             CreateAdmin.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blogapp
                     , postgresql-simple
                     , bcrypt
                     , bytestring
                     , yaml
  default-language:    Haskell2010

test-suite blogapp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blogapp
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/beriya/blogapp
